Application-CD/MC/mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mc
  name: mc
  namespace: mc
spec:
  ports:
    - port: 11211
      protocol: TCP
      targetPort: 11211
  selector:
    app: mc
  type: ClusterIP
