Application-CD/MC/mc-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mc
  namespace: mc
spec:
  podSelector:
    matchLabels:
      app: mc
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: app
          podSelector:
            matchLabels:
              app: app
      ports:
        - protocol: TCP
          port: 11211
